--- a/index.html
+++ b/index.html
@@ -5,15 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Carmen Cincotti</title>
-    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="css/css_reset.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>carmen cincotti</h1>
-
+    <div class="splash">
+      <div class="row splash-title"><h1>carmen</h1></div>
+      <div class="row splash-title"><h1>cincotti</h1></div>
+        <div class="index-buttons">
+          <div class="index-button">
+            <button class="image-cropper"><img id="hotdog" src="nathans.JPG"/></button>
+            <h2>eater</h2>
+          </div>
+          <div class="index-button">
+            <button class="image-cropper"><img id="headshot" src="headshot.jpg"/></button>
+            <h2>web developer</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="social-media-links">
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="fa fa-angellist" aria-hidden="true"></i>
+        <i class="fa fa-youtube" aria-hidden="true"></i>
+      </div>
+      <p>website by carmen, please watch my youtube videos.</p>
+    </footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
