finish splash, go onto eater

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="splash">
       <div class="row splash-title"><h1>carmen</h1></div>
       <div class="row splash-title"><h1>cincotti</h1></div>
-        <div class="index-buttons">
+        <div class="index-buttons slideInFromBottom">
           <div class="index-button">
             <button class="image-cropper"><img id="hotdog" src="nathans.JPG"/></button>
             <h2>eater</h2>
@@ -32,7 +32,12 @@
           </div>
         </div>
       </div>
+    <div class="eater-splash">
+      <div class="row eater-splash-title"><h1>world champion eater</h1></div>
+      <div class="row eater-splash-title"><h2>ranked #3 in the world</h2></div>
+
     </div>
+
     <footer>
       <div class="social-media-links">
         <i class="fa fa-github" aria-hidden="true"></i>
