--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <nav class="navbar fixed-top navbar-light bg-faded">
+      <a class="navbar-brand" href="#">carmen cincotti</a>
+    </nav>
     <div class="splash">
       <div class="row splash-title"><h1>carmen</h1></div>
       <div class="row splash-title"><h1>cincotti</h1></div>
         <div class="index-buttons slideInFromBottom">
-          <div class="index-button">
-            <button class="image-cropper"><img id="hotdog" src="nathans.JPG"/></button>
+          <div class="index-button" id="hotdog">
+            <button class="image-cropper"><img class="index-image" id="hotdog" src="nathans.JPG"/></button>
             <h2>eater</h2>
           </div>
           <div class="index-button">
-            <button class="image-cropper"><img id="headshot" src="headshot.jpg"/></button>
+            <button class="image-cropper"><img class="index-image" id="headshot" src="headshot.jpg"/></button>
             <h2>web developer</h2>
           </div>
         </div>
