--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Carmen Cincotti</title>
     <link rel="stylesheet" href="css/css_reset.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Latest compiled and minified CSS -->
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -15,33 +14,51 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,600,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-light bg-faded">
-      <a class="navbar-brand" href="#">carmen cincotti</a>
-    </nav>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- <div class="navbar-header">
+        <a class="navbar-brand" href="#">WebSiteName</a>
+      </div> -->
+      <!-- <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li>
+      </ul> -->
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">EATER</a></li>
+        <li><a href="#">DEV</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </div>
+  </nav>
+
     <div class="splash">
-      <div class="row splash-title"><h1>carmen</h1></div>
-      <div class="row splash-title"><h1>cincotti</h1></div>
+      <video poster="" src="./coffee.mp4" type="video/mp4" class="bgvid" id="covid" playsinline autoplay muted loop></video>
+      <video poster="" src="./nathans.mp4" type="video/mp4" class="bgvid" id="hdvid" playsinline autoplay muted loop></video>
+      <div class="row splash-title">
+        <h1>carmen cincotti</h1>
+        <h2>eater &diams; dev</h2>
+      </div>
         <div class="index-buttons slideInFromBottom">
           <div class="index-button" id="hotdog">
-            <button class="image-cropper"><img class="index-image" id="hotdog" src="nathans.JPG"/></button>
-            <h2>eater</h2>
+            <button class="hide-background"><i class="fa fa-cutlery" aria-hidden="true"></i></button>
           </div>
-          <div class="index-button">
-            <button class="image-cropper"><img class="index-image" id="headshot" src="headshot.jpg"/></button>
-            <h2>web developer</h2>
+          <div class="index-button" id="code">
+            <button class="hide-background"><i class="fa fa-code" aria-hidden="true"></i></button>
           </div>
         </div>
-      </div>
+    </div>
     <div class="eater-splash">
       <div class="row eater-splash-title"><h1>world champion eater</h1></div>
       <div class="row eater-splash-title"><h2>ranked #3 in the world</h2></div>
-
     </div>
 
-    <footer>
+    <!-- <footer>
       <div class="social-media-links">
         <i class="fa fa-github" aria-hidden="true"></i>
         <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -51,7 +68,7 @@
         <i class="fa fa-youtube" aria-hidden="true"></i>
       </div>
       <p>website by carmen, please watch my youtube videos.</p>
-    </footer>
+    </footer> -->
     <script src="./js/main.js"></script>
   </body>
 </html>
