Add very cool background

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <h2>eater &diams; dev</h2>
       </div>
         <div class="index-buttons slideInFromBottom">
-          <div class="index-button" id="hotdog">
-            <button class="hide-background"><i class="fa fa-cutlery" aria-hidden="true"></i></button>
+          <div class="index-button">
+            <button class="hide-background"><i class="fa fa-cutlery" id="hotdog" aria-hidden="true"></i></button>
           </div>
-          <div class="index-button" id="code">
-            <button class="hide-background"><i class="fa fa-code" aria-hidden="true"></i></button>
+          <div class="index-button">
+            <button class="hide-background"><i class="fa fa-code" id="code" aria-hidden="true"></i></button>
           </div>
         </div>
     </div>
