--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
-      <!-- <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
-      </div> -->
-      <!-- <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-      </ul> -->
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">EATER</a></li>
-        <li><a href="#">DEV</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
+      <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      </div>
+
+       <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">EATER</a></li>
+          <li><a href="#">DEV</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
