start eating page

--- a/eat.html
+++ b/eat.html
@@ -30,8 +30,8 @@
 
        <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">EATER</a></li>
-          <li><a href="#">DEV</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">SCHEDULE</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
@@ -39,21 +39,9 @@
     </div>
   </nav>
 
-    <div class="splash">
-      <video poster="" src="./coffee.mp4" type="video/mp4" class="bgvid" id="covid" playsinline autoplay muted loop></video>
-      <video poster="" src="./nathans.mp4" type="video/mp4" class="bgvid" id="hdvid" playsinline autoplay muted loop></video>
-      <div class="row splash-title">
-        <h1>carmen cincotti</h1>
-        <h2>eater &diams; dev</h2>
-      </div>
-        <div class="index-buttons slideInFromBottom">
-          <div class="index-button">
-            <button class="hide-background"><i class="fa fa-cutlery fa-button" id="hotdog" aria-hidden="true"><a href="./eat.html"></a></i></button>
-          </div>
-          <div class="index-button">
-            <button class="hide-background"><i class="fa fa-code fa-button" id="code" aria-hidden="true"></i></button>
-          </div>
-        </div>
+    <div class="eater-splash">
+      <div class="row eater-splash-title"><h1>world champion eater</h1></div>
+      <div class="row eater-splash-title"><h2>ranked #2 in the world</h2></div>
     </div>
 
     <!-- <footer>
