--- a/eat.html
+++ b/eat.html
@@ -50,6 +50,74 @@
       </div>
     </div>
 
+    <section class="container">
+      <h1>ABOUT ME</h1>
+      <p>
+        I was born on the 4th of July in the 1993th year. I grew up watching the Nathan's Famous Hot Dog Eating Contest.
+        In my 21st year, I decided to give it a try. Now I'm part of the circus that is Major League Eating... and I'm pretty damn good!
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="trophy.JPG" alt="Chania">
+      <div class="carousel-caption">
+        <h3>Nathan's Famous 2017</h3>
+        <p>60 hot dogs and buns - 2nd place</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="corn.jpg" alt="Chicago">
+      <div class="carousel-caption">
+        <h3>Chicago</h3>
+        <p>Thank you, Chicago!</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="porkroll.jpg" alt="New York">
+      <div class="carousel-caption">
+        <h3>New York</h3>
+        <p>We love the Big Apple!</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="croquetas.jpg" alt="New York">
+      <div class="carousel-caption">
+        <h3>New York</h3>
+        <p>We love the Big Apple!</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+      </p>
+
+      <h1>RECORDS</h1>
+      <p>
+
+      </p>
+    </section>
+
     <section id="press">
       <h1>MY FAVORITE VIDEOS</h1>
       <div class = "video-nav row">
@@ -103,6 +171,7 @@
       calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/k7irji1r7kqrpgj8qm2ppmt26o@group.calendar.google.com/events?key=AIzaSyAD9RpqHHBEXr5nE0OcBHjKHM-rRSj2ldg',
       past: false,
       upcoming: true,
+      dayNames: false,
       pastTopN: -1,
       upcomingTopN: 3,
       itemsTagName: 'li',
